--- a/environment.yml
+++ b/environment.yml
@@ -1,2 +1,2 @@
-source activate example-environment
+source activate Taller 4 Estática.ipynb-environment
 conda env export --no-builds -f environment.yml
